# tether

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  REUSE.toml  SECURITY.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature.yml  question.yml  validation-oracle-failure.yml
.github/workflows/: ci.yml  deep-gpu.yml  deep.yml  deps-audit.yml  docs.yml  large-fixtures.yml  packaging.yml  release.yml  schema-guard.yml  scorecard.yml  sidecar-measure.yml  sidecar.yml
deep/: conda-lock.yml  environment.yml
docs/: PRD.md  cli.md  compatibility.md  glossary.md  index.md  packaging.md  privacy.md  release.md  stability.md  troubleshooting.md  validation.md
docs/adr/: 0000-template.md  0001-provenance-first-data-model.md  0002-smd-superset-round-trip.md  0003-apparent-e-never-nan.md  0004-pin-and-hold-dual-lock-isolation.md  0005-m0-schema-freeze.md  0006-sidecar-ipc-escalation.md  0007-parity-is-statistical.md  0008-correction-factor-remap.md  0009-parity-metrics-and-freeze.md  0010-defer-cross-os-gui-handoff.md  0011-home-extraction-recall-at-m1.md  0012-registration-pairing-mutual-nn.md  0013-fourier-mellin-similarity-prealign.md  0014-registration-map-rms-gate-and-over-gate.md  0015-donor-anchored-colocalization.md  0016-extraction-trace-store-layout.md  0017-deeplasi-validation-reader.md  0018-extract-cli-native-pipeline.md  0019-extract-cli-imported-tmap.md  0020-extraction-oracle-and-deferred-m1-close.md  0021-particle-detection-modes.md  0022-m1-acceptance-reframe-and-close.md  0023-curation-label-codec-and-labels-log.md  0024-idealization-store-layout-staleness-and-nstates.md  0025-tmaven-handoff-and-return-leg-reconcile.md  0026-photobleach-detection-and-window-default.md  0027-leakage-alpha-tail-estimator.md  0028-gamma-acceptor-bleach-step-estimator.md  0029-idealization-correction-provenance-hash-and-per-factor-staleness.md  0030-headless-batch-runner-isolation-and-checkpoint.md  0031-batch-sidecar-supervision.md  0032-nfr-perf-budget-verification.md  0033-condition-identity-and-rekey.md  0034-gradient-boosting-quality-ranker.md  0035-portable-model-persistence.md  0036-label-weighting-cold-start-decay.md  0037-cross-condition-drift-advisory-flag.md  0038-provisional-prior-training-fold.md  (+15 more)
packaging/: README.md  construct.yaml
schema/: kinsoft_reference.json  parity_tolerance.json  schema_frozen.json
scripts/: dump_schema.py  make_acceptor_fixture.py  make_aperture_fixture.py  make_bead_prealign_fixture.py  make_deeplasi_fixture.py  make_fixtures.py  make_kinsoft_fixture.py  make_tdat_fixture.py  make_tmap_fixture.py  measure_parity.py  run_m1_oracle.py  setup_sidecar.py
sidecar/: conda-lock.yml  environment.yml
src/tether/: cli.py  (+2 more)
tests/: _analysis_store.py  test_acceptor_intensity.py  test_adr_index.py  test_analysis_anticorrelation.py  test_analysis_cloud.py  test_analysis_cloud_shape.py  test_analysis_crosscorr.py  test_analysis_dwell.py  test_analysis_histogram.py  test_analysis_histogram2d.py  test_analysis_histogram_overlay.py  test_analysis_histogram_postsync.py  test_analysis_import.py  test_analysis_overlap.py  test_analysis_per_condition_histogram.py  test_analysis_query.py  test_analysis_state_number.py  test_analysis_store.py  test_analysis_tdp.py  test_analysis_transition_prob.py  test_aperture.py  test_calibrate.py  test_check_smd_opens.py  test_citation_metadata.py  test_cli.py  test_cli_reference.py  test_coloc.py  test_conditions.py  test_curation.py  test_deep_finetune_deep.py  test_deep_gpu_deep.py  test_deep_lock.py  test_deep_model_deep.py  test_deeplasi.py  test_deeplasi_executor.py  test_deeplasi_wizard.py  test_deeplasi_wizard_ui.py  test_detect.py  test_docs_export_columns.py  test_docs_parameter_defaults.py  (+86 more)
(+132 files in other folders)
