# SPDX-FileCopyrightText: 2026 The Tether Authors <bioedca@u.northwestern.edu>
# SPDX-License-Identifier: GPL-3.0-or-later
#
# Tether — packaging, lint, and test configuration.
#
# Dependency PINS live in the committed conda locks (the base `conda-lock.yml`
# plus the isolated `sidecar/conda-lock.yml`), NOT here: the PRD pin-and-hold
# policy keeps exact versions in the lock as the single source of truth
# (PRD §4.1). `requires-python` below is only the supported FLOOR; the concrete
# interpreter pin (inside Numba's supported window) is owned by the base
# conda-lock, which lands in a follow-up PR.

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tether"
description = "A cross-platform single-molecule FRET desktop suite (Mondragón Lab, Northwestern)."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "The Tether Authors", email = "bioedca@u.northwestern.edu" }]
keywords = ["smFRET", "single-molecule", "FRET", "microscopy", "biophysics"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]

# Runtime dependencies are intentionally NOT declared here — the locked conda
# environment provides the scientific stack (PRD §4.1), and CI installs the
# package with `pip install -e . --no-deps`. The extras below are dev-time
# conveniences only and remain unpinned (the lock is authoritative).
[project.optional-dependencies]
test = ["pytest", "pytest-qt", "pytest-cov"]
docs = ["mkdocs", "mkdocs-material"]
dev = ["ruff", "pre-commit", "reuse"]

# Console entry point (PRD §7.11 headless core). Stdlib argparse — no runtime
# dependency, so no conda-lock change (pin-and-hold). Real subcommands land at M1.
[project.scripts]
tether = "tether.cli:main"

[project.urls]
Homepage = "https://github.com/bioedca/tether"
Repository = "https://github.com/bioedca/tether"
Issues = "https://github.com/bioedca/tether/issues"

# --- Version: derived from git via hatch-vcs (PRD §4.1 "version from git") ----
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/tether/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tether"]

# --- Ruff: lint + format (CI `lint` job, PRD §12.6) --------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# `_version.py` is generated by hatch-vcs at build time (and gitignored); never
# lint/format it. Explicit so the CI `lint` job is robust even where ruff's
# gitignore detection does not apply (e.g. a linked git worktree).
extend-exclude = ["src/tether/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow re-exports from package __init__ files

[tool.ruff.lint.isort]
known-first-party = ["tether"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

# --- Pytest (CI `test` 3-OS matrix, PRD §12.6) -------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
markers = [
  "gui: exercises the PySide6/napari/pyqtgraph GUI (run headless: QT_QPA_PLATFORM=offscreen).",
  "large: needs the gated large-fixture tier (never part of the default required matrix).",
  "sidecar: drives the live tMAVEN sidecar env (needs $TETHER_SIDECAR_PYTHON; never in the CI matrix).",
  "deep: drives the live torch deep-classifier env (deep/conda-lock.yml; the non-required deep.yml leg, never in the base matrix).",
]
